--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
             margin-top: 2rem;
             margin-bottom: 2rem;
         }
-        /*
-        #amount {
-            max-width: 8rem;
-        }
-        */
         #rewards-phrase {
             text-align: center;
             opacity: 0.1;
@@ -76,7 +71,7 @@
 
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                <label for="amount">How much do you think you spend each month?</label>
+                <label for="amount">How much do you spend each month?</label>
                 <form class="form">
                     <div class="form-group mr-1">
                         <div class="input-group">
@@ -84,8 +79,10 @@
                                 <span class="input-group-text">$</span>
                             </div>
                             <input type="number" step="1" class="form-control" id="amount"
-                                aria-describedby="How much do you think you spend each month?" placeholder="Enter amount...">
+                                aria-describedby="How much do you spend each month?" placeholder="Enter amount...">
+                            
                         </div>
+                        <small class="text-muted">Don't be specific. An estimate will do.</small>
                     </div>
                     <div class="form-group"> <button id="calculate" class="btn btn-block btn-outline btn-primary disabled" disabled type="submit">Calculate my&nbsp;<span class="rewards-type"></span></button>
                     </div>
@@ -96,10 +93,10 @@
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                     <div id="method" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
-                            <label class="btn btn-outline-success">
+                            <label class="btn btn-outline-success active">
                                 <input type="radio" name="options" id="option1" value="rewardsTypeEnum.cashback" autocomplete="off" checked>Cash back
                             </label>
-                            <label class="btn btn-outline-success active">
+                            <label class="btn btn-outline-success">
                                 <input type="radio" name="options" id="option2" value="rewardsTypeEnum.points" autocomplete="off">Points
                             </label>
                     </div>
@@ -119,7 +116,7 @@
                 cashback: 1,
                 points: 2
             },
-            rewardsType = rewardsTypeEnum.points;
+            rewardsType = rewardsTypeEnum.cashback;
 
         function formatDollarAmount(amount) {
             return amount.toLocaleString('en-CA', { style: 'currency', currency: 'CAD' });
